@@ -75,6 +75,7 @@ t/lib.pl
 t/manifest.t
 t/mysql.dbtest
 t/pod.t
+t/rt118977-zerofill.t
 t/rt25389-bin-case.t
 t/rt50304-column_info_parentheses.t
 t/rt61849-bind-param-buffer-overflow.t
